EasyCashFlow/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    RANGE

Grammar

Rule 0     S' -> action
Rule 1     action -> fuction_earn
Rule 2     action -> fuction_lose
Rule 3     action -> fuction_remove
Rule 4     action -> fuction_pw
Rule 5     action -> fuction_fw
Rule 6     action -> fuction_display
Rule 7     action -> fuction_length
Rule 8     action -> variable
Rule 9     action -> EMPTY
Rule 10    fuction_earn -> EARN LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
Rule 11    fuction_earn -> EARN LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
Rule 12    fuction_lose -> LOSE LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
Rule 13    fuction_lose -> LOSE LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
Rule 14    fuction_remove -> REMOVE LPAREN INTEGER COMMA ID RPAREN
Rule 15    fuction_pw -> PW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
Rule 16    fuction_pw -> PW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
Rule 17    fuction_fw -> FW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
Rule 18    fuction_fw -> FW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
Rule 19    fuction_display -> DISPLAY LPAREN ID RPAREN
Rule 20    fuction_length -> LENGTH LPAREN ID RPAREN
Rule 21    variable_combine -> COMBINE LPAREN ID COMMA ID RPAREN
Rule 22    variable_substract -> SUBSTRACT LPAREN ID COMMA ID RPAREN
Rule 23    variable_create -> CREATE LPAREN INTEGER RPAREN
Rule 24    variable -> CFD ID EQUAL variable_create
Rule 25    variable -> CFD ID EQUAL variable_combine
Rule 26    variable -> CFD ID EQUAL variable_substract

Terminals, with rules where they appear

CFD                  : 24 25 26
COMBINE              : 21
COMMA                : 10 10 11 11 12 12 13 13 14 15 15 16 16 17 17 18 18 21 22
CREATE               : 23
DISPLAY              : 19
EARN                 : 10 11
EMPTY                : 9
EQUAL                : 24 25 26
FLOAT                : 10 12 15 17
FW                   : 17 18
ID                   : 10 11 12 13 14 15 16 17 18 19 20 21 21 22 22 24 25 26
INTEGER              : 10 11 11 12 13 13 14 15 16 16 17 18 18 23
LENGTH               : 20
LOSE                 : 12 13
LPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 22 23
PW                   : 15 16
RANGE                : 
REMOVE               : 14
RPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 22 23
SUBSTRACT            : 22
error                : 

Nonterminals, with rules where they appear

action               : 0
fuction_display      : 6
fuction_earn         : 1
fuction_fw           : 5
fuction_length       : 7
fuction_lose         : 2
fuction_pw           : 4
fuction_remove       : 3
variable             : 8
variable_combine     : 25
variable_create      : 24
variable_substract   : 26

Parsing method: LALR

state 0

    (0) S' -> . action
    (1) action -> . fuction_earn
    (2) action -> . fuction_lose
    (3) action -> . fuction_remove
    (4) action -> . fuction_pw
    (5) action -> . fuction_fw
    (6) action -> . fuction_display
    (7) action -> . fuction_length
    (8) action -> . variable
    (9) action -> . EMPTY
    (10) fuction_earn -> . EARN LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (11) fuction_earn -> . EARN LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
    (12) fuction_lose -> . LOSE LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (13) fuction_lose -> . LOSE LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
    (14) fuction_remove -> . REMOVE LPAREN INTEGER COMMA ID RPAREN
    (15) fuction_pw -> . PW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (16) fuction_pw -> . PW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
    (17) fuction_fw -> . FW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (18) fuction_fw -> . FW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN
    (19) fuction_display -> . DISPLAY LPAREN ID RPAREN
    (20) fuction_length -> . LENGTH LPAREN ID RPAREN
    (24) variable -> . CFD ID EQUAL variable_create
    (25) variable -> . CFD ID EQUAL variable_combine
    (26) variable -> . CFD ID EQUAL variable_substract

    EMPTY           shift and go to state 10
    EARN            shift and go to state 11
    LOSE            shift and go to state 12
    REMOVE          shift and go to state 13
    PW              shift and go to state 14
    FW              shift and go to state 15
    DISPLAY         shift and go to state 16
    LENGTH          shift and go to state 17
    CFD             shift and go to state 18

    action                         shift and go to state 1
    fuction_earn                   shift and go to state 2
    fuction_lose                   shift and go to state 3
    fuction_remove                 shift and go to state 4
    fuction_pw                     shift and go to state 5
    fuction_fw                     shift and go to state 6
    fuction_display                shift and go to state 7
    fuction_length                 shift and go to state 8
    variable                       shift and go to state 9

state 1

    (0) S' -> action .



state 2

    (1) action -> fuction_earn .

    $end            reduce using rule 1 (action -> fuction_earn .)


state 3

    (2) action -> fuction_lose .

    $end            reduce using rule 2 (action -> fuction_lose .)


state 4

    (3) action -> fuction_remove .

    $end            reduce using rule 3 (action -> fuction_remove .)


state 5

    (4) action -> fuction_pw .

    $end            reduce using rule 4 (action -> fuction_pw .)


state 6

    (5) action -> fuction_fw .

    $end            reduce using rule 5 (action -> fuction_fw .)


state 7

    (6) action -> fuction_display .

    $end            reduce using rule 6 (action -> fuction_display .)


state 8

    (7) action -> fuction_length .

    $end            reduce using rule 7 (action -> fuction_length .)


state 9

    (8) action -> variable .

    $end            reduce using rule 8 (action -> variable .)


state 10

    (9) action -> EMPTY .

    $end            reduce using rule 9 (action -> EMPTY .)


state 11

    (10) fuction_earn -> EARN . LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (11) fuction_earn -> EARN . LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN

    LPAREN          shift and go to state 19


state 12

    (12) fuction_lose -> LOSE . LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (13) fuction_lose -> LOSE . LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN

    LPAREN          shift and go to state 20


state 13

    (14) fuction_remove -> REMOVE . LPAREN INTEGER COMMA ID RPAREN

    LPAREN          shift and go to state 21


state 14

    (15) fuction_pw -> PW . LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (16) fuction_pw -> PW . LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN

    LPAREN          shift and go to state 22


state 15

    (17) fuction_fw -> FW . LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN
    (18) fuction_fw -> FW . LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN

    LPAREN          shift and go to state 23


state 16

    (19) fuction_display -> DISPLAY . LPAREN ID RPAREN

    LPAREN          shift and go to state 24


state 17

    (20) fuction_length -> LENGTH . LPAREN ID RPAREN

    LPAREN          shift and go to state 25


state 18

    (24) variable -> CFD . ID EQUAL variable_create
    (25) variable -> CFD . ID EQUAL variable_combine
    (26) variable -> CFD . ID EQUAL variable_substract

    ID              shift and go to state 26


state 19

    (10) fuction_earn -> EARN LPAREN . FLOAT COMMA INTEGER COMMA ID RPAREN
    (11) fuction_earn -> EARN LPAREN . INTEGER COMMA INTEGER COMMA ID RPAREN

    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28


state 20

    (12) fuction_lose -> LOSE LPAREN . FLOAT COMMA INTEGER COMMA ID RPAREN
    (13) fuction_lose -> LOSE LPAREN . INTEGER COMMA INTEGER COMMA ID RPAREN

    FLOAT           shift and go to state 29
    INTEGER         shift and go to state 30


state 21

    (14) fuction_remove -> REMOVE LPAREN . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 31


state 22

    (15) fuction_pw -> PW LPAREN . FLOAT COMMA INTEGER COMMA ID RPAREN
    (16) fuction_pw -> PW LPAREN . INTEGER COMMA INTEGER COMMA ID RPAREN

    FLOAT           shift and go to state 32
    INTEGER         shift and go to state 33


state 23

    (17) fuction_fw -> FW LPAREN . FLOAT COMMA INTEGER COMMA ID RPAREN
    (18) fuction_fw -> FW LPAREN . INTEGER COMMA INTEGER COMMA ID RPAREN

    FLOAT           shift and go to state 34
    INTEGER         shift and go to state 35


state 24

    (19) fuction_display -> DISPLAY LPAREN . ID RPAREN

    ID              shift and go to state 36


state 25

    (20) fuction_length -> LENGTH LPAREN . ID RPAREN

    ID              shift and go to state 37


state 26

    (24) variable -> CFD ID . EQUAL variable_create
    (25) variable -> CFD ID . EQUAL variable_combine
    (26) variable -> CFD ID . EQUAL variable_substract

    EQUAL           shift and go to state 38


state 27

    (10) fuction_earn -> EARN LPAREN FLOAT . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 39


state 28

    (11) fuction_earn -> EARN LPAREN INTEGER . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 40


state 29

    (12) fuction_lose -> LOSE LPAREN FLOAT . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 41


state 30

    (13) fuction_lose -> LOSE LPAREN INTEGER . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 42


state 31

    (14) fuction_remove -> REMOVE LPAREN INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 43


state 32

    (15) fuction_pw -> PW LPAREN FLOAT . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 44


state 33

    (16) fuction_pw -> PW LPAREN INTEGER . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 45


state 34

    (17) fuction_fw -> FW LPAREN FLOAT . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 46


state 35

    (18) fuction_fw -> FW LPAREN INTEGER . COMMA INTEGER COMMA ID RPAREN

    COMMA           shift and go to state 47


state 36

    (19) fuction_display -> DISPLAY LPAREN ID . RPAREN

    RPAREN          shift and go to state 48


state 37

    (20) fuction_length -> LENGTH LPAREN ID . RPAREN

    RPAREN          shift and go to state 49


state 38

    (24) variable -> CFD ID EQUAL . variable_create
    (25) variable -> CFD ID EQUAL . variable_combine
    (26) variable -> CFD ID EQUAL . variable_substract
    (23) variable_create -> . CREATE LPAREN INTEGER RPAREN
    (21) variable_combine -> . COMBINE LPAREN ID COMMA ID RPAREN
    (22) variable_substract -> . SUBSTRACT LPAREN ID COMMA ID RPAREN

    CREATE          shift and go to state 53
    COMBINE         shift and go to state 54
    SUBSTRACT       shift and go to state 55

    variable_create                shift and go to state 50
    variable_combine               shift and go to state 51
    variable_substract             shift and go to state 52

state 39

    (10) fuction_earn -> EARN LPAREN FLOAT COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 56


state 40

    (11) fuction_earn -> EARN LPAREN INTEGER COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 57


state 41

    (12) fuction_lose -> LOSE LPAREN FLOAT COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 58


state 42

    (13) fuction_lose -> LOSE LPAREN INTEGER COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 59


state 43

    (14) fuction_remove -> REMOVE LPAREN INTEGER COMMA . ID RPAREN

    ID              shift and go to state 60


state 44

    (15) fuction_pw -> PW LPAREN FLOAT COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 61


state 45

    (16) fuction_pw -> PW LPAREN INTEGER COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 62


state 46

    (17) fuction_fw -> FW LPAREN FLOAT COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 63


state 47

    (18) fuction_fw -> FW LPAREN INTEGER COMMA . INTEGER COMMA ID RPAREN

    INTEGER         shift and go to state 64


state 48

    (19) fuction_display -> DISPLAY LPAREN ID RPAREN .

    $end            reduce using rule 19 (fuction_display -> DISPLAY LPAREN ID RPAREN .)


state 49

    (20) fuction_length -> LENGTH LPAREN ID RPAREN .

    $end            reduce using rule 20 (fuction_length -> LENGTH LPAREN ID RPAREN .)


state 50

    (24) variable -> CFD ID EQUAL variable_create .

    $end            reduce using rule 24 (variable -> CFD ID EQUAL variable_create .)


state 51

    (25) variable -> CFD ID EQUAL variable_combine .

    $end            reduce using rule 25 (variable -> CFD ID EQUAL variable_combine .)


state 52

    (26) variable -> CFD ID EQUAL variable_substract .

    $end            reduce using rule 26 (variable -> CFD ID EQUAL variable_substract .)


state 53

    (23) variable_create -> CREATE . LPAREN INTEGER RPAREN

    LPAREN          shift and go to state 65


state 54

    (21) variable_combine -> COMBINE . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 66


state 55

    (22) variable_substract -> SUBSTRACT . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 67


state 56

    (10) fuction_earn -> EARN LPAREN FLOAT COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 68


state 57

    (11) fuction_earn -> EARN LPAREN INTEGER COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 69


state 58

    (12) fuction_lose -> LOSE LPAREN FLOAT COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 70


state 59

    (13) fuction_lose -> LOSE LPAREN INTEGER COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 71


state 60

    (14) fuction_remove -> REMOVE LPAREN INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 72


state 61

    (15) fuction_pw -> PW LPAREN FLOAT COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 73


state 62

    (16) fuction_pw -> PW LPAREN INTEGER COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 74


state 63

    (17) fuction_fw -> FW LPAREN FLOAT COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 75


state 64

    (18) fuction_fw -> FW LPAREN INTEGER COMMA INTEGER . COMMA ID RPAREN

    COMMA           shift and go to state 76


state 65

    (23) variable_create -> CREATE LPAREN . INTEGER RPAREN

    INTEGER         shift and go to state 77


state 66

    (21) variable_combine -> COMBINE LPAREN . ID COMMA ID RPAREN

    ID              shift and go to state 78


state 67

    (22) variable_substract -> SUBSTRACT LPAREN . ID COMMA ID RPAREN

    ID              shift and go to state 79


state 68

    (10) fuction_earn -> EARN LPAREN FLOAT COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 80


state 69

    (11) fuction_earn -> EARN LPAREN INTEGER COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 81


state 70

    (12) fuction_lose -> LOSE LPAREN FLOAT COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 82


state 71

    (13) fuction_lose -> LOSE LPAREN INTEGER COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 83


state 72

    (14) fuction_remove -> REMOVE LPAREN INTEGER COMMA ID RPAREN .

    $end            reduce using rule 14 (fuction_remove -> REMOVE LPAREN INTEGER COMMA ID RPAREN .)


state 73

    (15) fuction_pw -> PW LPAREN FLOAT COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 84


state 74

    (16) fuction_pw -> PW LPAREN INTEGER COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 85


state 75

    (17) fuction_fw -> FW LPAREN FLOAT COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 86


state 76

    (18) fuction_fw -> FW LPAREN INTEGER COMMA INTEGER COMMA . ID RPAREN

    ID              shift and go to state 87


state 77

    (23) variable_create -> CREATE LPAREN INTEGER . RPAREN

    RPAREN          shift and go to state 88


state 78

    (21) variable_combine -> COMBINE LPAREN ID . COMMA ID RPAREN

    COMMA           shift and go to state 89


state 79

    (22) variable_substract -> SUBSTRACT LPAREN ID . COMMA ID RPAREN

    COMMA           shift and go to state 90


state 80

    (10) fuction_earn -> EARN LPAREN FLOAT COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 91


state 81

    (11) fuction_earn -> EARN LPAREN INTEGER COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 92


state 82

    (12) fuction_lose -> LOSE LPAREN FLOAT COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 93


state 83

    (13) fuction_lose -> LOSE LPAREN INTEGER COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 94


state 84

    (15) fuction_pw -> PW LPAREN FLOAT COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 95


state 85

    (16) fuction_pw -> PW LPAREN INTEGER COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 96


state 86

    (17) fuction_fw -> FW LPAREN FLOAT COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 97


state 87

    (18) fuction_fw -> FW LPAREN INTEGER COMMA INTEGER COMMA ID . RPAREN

    RPAREN          shift and go to state 98


state 88

    (23) variable_create -> CREATE LPAREN INTEGER RPAREN .

    $end            reduce using rule 23 (variable_create -> CREATE LPAREN INTEGER RPAREN .)


state 89

    (21) variable_combine -> COMBINE LPAREN ID COMMA . ID RPAREN

    ID              shift and go to state 99


state 90

    (22) variable_substract -> SUBSTRACT LPAREN ID COMMA . ID RPAREN

    ID              shift and go to state 100


state 91

    (10) fuction_earn -> EARN LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 10 (fuction_earn -> EARN LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .)


state 92

    (11) fuction_earn -> EARN LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 11 (fuction_earn -> EARN LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .)


state 93

    (12) fuction_lose -> LOSE LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 12 (fuction_lose -> LOSE LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .)


state 94

    (13) fuction_lose -> LOSE LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 13 (fuction_lose -> LOSE LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .)


state 95

    (15) fuction_pw -> PW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 15 (fuction_pw -> PW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .)


state 96

    (16) fuction_pw -> PW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 16 (fuction_pw -> PW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .)


state 97

    (17) fuction_fw -> FW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 17 (fuction_fw -> FW LPAREN FLOAT COMMA INTEGER COMMA ID RPAREN .)


state 98

    (18) fuction_fw -> FW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .

    $end            reduce using rule 18 (fuction_fw -> FW LPAREN INTEGER COMMA INTEGER COMMA ID RPAREN .)


state 99

    (21) variable_combine -> COMBINE LPAREN ID COMMA ID . RPAREN

    RPAREN          shift and go to state 101


state 100

    (22) variable_substract -> SUBSTRACT LPAREN ID COMMA ID . RPAREN

    RPAREN          shift and go to state 102


state 101

    (21) variable_combine -> COMBINE LPAREN ID COMMA ID RPAREN .

    $end            reduce using rule 21 (variable_combine -> COMBINE LPAREN ID COMMA ID RPAREN .)


state 102

    (22) variable_substract -> SUBSTRACT LPAREN ID COMMA ID RPAREN .

    $end            reduce using rule 22 (variable_substract -> SUBSTRACT LPAREN ID COMMA ID RPAREN .)

